Made the spectrum arrays of constant order.